<package>
  <name>robot_arm</name>
  <version>0.5.0</version>

  <description>Assignment</description>
  <author email="dsingh@me.iitr.ac.in">devinder</author>

  <maintainer email="dsingh@me.iitr.ac.in">devinder</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
